[package]
name = "tree-tap"
version = "0.1.0"
authors = ["Paul Merrill <pdm@pdm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = "1.4.6"
rocket = "0.4.7"
rocket_contrib = "0.4.7"
rust-argon2 = "0.8.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
zstd = "0.6.1"
