[package]
name = "tree-tap"
version = "0.1.0"
authors = ["Paul Merrill <pdm@pdm.me>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
diesel = "1.4.6"
rocket = "0.4.10"
rocket_contrib = "0.4.10"
rocket_cors = "0.5.1"
rust-argon2 = "0.8.3"
serde = "1.0.125"
serde_derive = "1.0.125"
serde_json = "1.0.64"
zstd = "0.6.1"
